# deterministic-pgp-keys

./: .gitignore  Cargo.toml  README.md
src/: generate.rs  main.rs
src/pgp/: base64_decoder.rs  base64_reader.rs  de.rs  errors.rs  line_writer.rs  mod.rs  normalize_lines.rs  ser.rs  util.rs
src/pgp/armor/: reader.rs  writer.rs
src/pgp/composed/: shared.rs  signature.rs
src/pgp/composed/key/: builder.rs  public.rs  secret.rs  shared.rs
src/pgp/composed/message/: decrypt.rs  parser.rs  types.rs
src/pgp/composed/signed_key/: key_parser_macros.rs  parse.rs  public.rs  secret.rs  shared.rs
src/pgp/crypto/: aes_kw.rs  checksum.rs  ecc_curve.rs  ecdh.rs  eddsa.rs  hash.rs  public_key.rs  rsa.rs  sym.rs
src/pgp/packet/: compressed_data.rs  key.rs  literal_data.rs  many.rs  marker.rs  mod_detection_code.rs  one_pass_signature.rs  packet_sum.rs  public_key_encrypted_session_key.rs  public_key_macro.rs  public_key_parser.rs  secret_key_macro.rs  secret_key_parser.rs  single.rs  sym_encrypted_data.rs  sym_encrypted_protected_data.rs  sym_key_encrypted_session_key.rs  trust.rs  user_attribute.rs  user_id.rs
src/pgp/packet/signature/: config.rs  de.rs  ser.rs  types.rs
src/pgp/types/: compression.rs  key.rs  key_id.rs  mpi.rs  packet.rs  public_key.rs  revocation_key.rs  s2k.rs  secret_key.rs  secret_key_repr.rs  user.rs
src/pgp/types/params/: encrypted_secret.rs  plain_secret.rs  public.rs  secret.rs
