[package]
name = "deterministic-pgp-keys"
version = "0.1.0"
edition = "2021"
authors = ["Jeffrey Bolle"]

[dependencies]
pgp = { git = "https://github.com/jeffreybolle/rpgp", rev = "6a5402464319cd87c2a470b3e063dd03475ad223" }
smallvec = "1.9.0"
rand = "0.8.5"
bip39 = "1.0.1"
chrono = "0.4.22"
clap = { version = "3.2.22", features = ["derive"] }
anyhow = "1.0.65"
sha2 = "0.10.6"
rpassword = "7.0"