[package]
name = "deterministic-pgp-keys"
version = "0.1.0"
edition = "2021"
authors = ["Jeffrey Bolle"]

[dependencies]
pgp = { git = "https://github.com/jeffreybolle/rpgp", rev = "0a0e98307e6a4fc45950e37a451a35796f2cc021" }
smallvec = "1.9.0"
rand = "0.8.5"
bip39 = "1.0.1"
chrono = "0.4.22"
clap = { version = "3.2.22", features = ["derive"] }
anyhow = "1.0.65"
sha2 = "0.10.6"
rpassword = "7.0"
rand_chacha = "0.3.1"